# or2024-invenio

./: .gitignore  .invenio  Pipfile  README.md  celerybeat-schedule.db  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg
assets/less/site/globals/: site.overrides  site.variables
docker/nginx/: Dockerfile  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/or2024_demo_instance_by_cottage_labs/: views.py  webpack.py
templates/semantic-ui/invenio_app_rdm/: header_frontpage.html
