
[metadata]
name = or24-invenio

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    or2024_demo_instance_by_cottage_labs_views = or2024_demo_instance_by_cottage_labs.views:create_blueprint
invenio_assets.webpack =
    or2024_demo_instance_by_cottage_labs_theme = or2024_demo_instance_by_cottage_labs.webpack:theme
